--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:36LXGbcYurTIkQQfGDIe8AA5qPNDG75IX7kYaFAX5Hk=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
